--- a/package.json
+++ b/package.json
@@ -8,28 +8,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~41.0.1",
-    "expo-status-bar": "~1.0.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-web": "~0.13.12",
-    "firebase": "8.2.3",
-    "@firebase/app": "0.x.0",
-    "react-navigation": "^4.1.0",
-    "@expo/vector-icons": "^12.0.0",
-    "@firebase/app-types": "0.x.0",
-    "@firebase/firestore": "*",
-    "react-native-screens": "~3.0.0",
-    "react-native-elements": "2.2.1",
-    "react-navigation-tabs": "^2.7.0",
-    "react-native-reanimated": "~2.1.0",
-    "@react-navigation/native": "^3.8.4",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-safe-area-context": "3.2.0"
+    "expo": "^38.0.0",
+    "expo-barcode-scanner": "~8.2.1",
+    "expo-permissions": "~9.0.1",
+    "expo-status-bar": "^1.0.0",
+    "firebase": "7.9.0",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-screens": "~2.9.0",
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.4.0",
+    "react-navigation-tabs": "^2.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.8.6",
+    "babel-preset-expo": "^8.2.3"
   },
   "private": true
 }
